# bookmark-analyzer

./: Cargo.toml  README.md  docker-compose.yml
src/: browser.rs  main.rs  ollama.rs  server.rs
